fix: fixing layout bugs

--- a/shelter/assets/sass/blocks/_media.scss
+++ b/shelter/assets/sass/blocks/_media.scss
@@ -1,4 +1,55 @@
-@media (max-width: 1280px) {
+@media (max-width: 1279px) {
+    .container {
+        max-width: 90%;
+    }
+
+    .header {
+        width: 100%;
+        padding-left: 0;
+        .nav {
+            ul {
+                left: 0;
+            }
+        }
+    }
+
+    .start-screen {
+        &__wrapper {
+            width: 100%;
+        }
+        &__content {
+            width: 43%;
+        }
+    }
+}
+
+
+
+@media (max-width: 992px) {
+    .container {
+        max-width: 92%;
+    }
+
+    .start-screen {
+        &__wrapper {
+            margin: 0;
+            min-height: 1165px;
+            padding-top: 30px;
+            background: url(../img/start-screen-puppy.png) no-repeat right bottom / 80%;
+        }
+        &__content {
+            margin: 0 auto;
+            width: 65%;
+            .btn {
+                display: block;
+                margin: 0 auto;
+            }
+        }
+    }
+}
+
+
+/* @media (max-width: 1280px) {
     .container {
         max-width: 960px;
     }
@@ -113,4 +164,4 @@
 
 @media (max-width: 760px) {
 
-}
+} */
