--- a/shelter/assets/sass/blocks/_start-screen.scss
+++ b/shelter/assets/sass/blocks/_start-screen.scss
@@ -7,7 +7,7 @@
         padding-top: 136px;
         width: 1200px;
         min-height: 728px;
-        background: url(../img/start-screen-puppy.png) no-repeat right bottom / 698px;
+        background: url(../img/start-screen-puppy.png) no-repeat right bottom / 58%;
     }
     &__content {
         width: 460px;
